public enum Fact
{ // remember to not change this ordering, because unity references them by index, so all references would get mixed up
	KingWantsYourHelpWithFathersDeath,
	KingsFatherDiedMysteriously,
	KingsFatherHadWeirdSymptoms,
	KingsFatherWasPoisoned,
	KingsAdvisorBehavesWeird,
}
