public enum FactState
{
	Undiscovered,
	Discovered,
	Discarded,
}
