public enum FactTopic
{ // remember to not change this ordering, because unity references them by index, so all references would get mixed up
	King,
	KingFather,
	KingAdvisor,
}
